--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,11 @@
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
+# This is required to provide enough memory for the Minecraft decompilation process.
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
 modid=jeimultiblocks
 author=sguest
 mod_version=0.0.1
-mc_version=1.16.5
-ie_version=5.1.0-148
-jei_version=7.7.1.152
-forge_version=36.2.34
+mc_version=1.18.2
+ie_version=8.0.2-149
+jei_version=9.4.3.122
+forge_version=40.1.19
