--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,18 +1,17 @@
 # The name of the mod loader type to load - for regular FML @Mod mods it should be javafml
 modLoader="javafml"
 # A version range to match for said mod loader - for regular FML @Mod it will be the forge version
-# Forge for 1.16.5 is version 36
-loaderVersion="[36,)"
+#mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
+loaderVersion="[40,)"
 issueTrackerURL="https://github.com/sguest/jei-multiblocks/issues"
 license="MIT"
-
 [[mods]]
-    modId="jeimultiblocks"
-    version="${version}"
-    displayName="Just Enough Immersive Multiblocks"
-    description="JEI support for Immersive Engineering Multiblocks"
-    authors="sguest"
-    credits="The Immersive Engineering team for a great base mod and source of sample code"
+modId="jeimultiblocks"
+version="${version}"
+displayName="Just Enough Immersive Multiblocks"
+description="JEI support for Immersive Engineering Multiblocks"
+authors="sguest"
+credits="The Immersive Engineering team for a great base mod and source of sample code"
 
 [[dependencies.jeimultiblocks]]
     modId="forge"
@@ -28,9 +27,9 @@ license="MIT"
     ordering="NONE"
     side="BOTH"
 
-[[dependencies.immersiveengineering]]
+[[dependencies.jeimultiblocks]]
     modId="immersiveengineering"
     mandatory=true
-    versionRange="[${ie_version}]"
-    ordering="BEFOR"
+    versionRange="[${ie_version},)"
+    ordering="BEFORE"
     side="BOTH"
