--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,9 @@ import groovy.json.JsonSlurper
 
 plugins {
     id 'eclipse'
+    id 'idea'
     id 'maven-publish'
-    id 'net.minecraftforge.gradle' version '5.1.+'
+    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
 }
 
 version = "${mc_version}-${mod_version}"
@@ -13,6 +14,10 @@ archivesBaseName = "${modid}"
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+
+base {
+    archivesName = "${modid}"
+}
 
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
 minecraft {
@@ -30,13 +35,14 @@ minecraft {
     // Use non-default mappings at your own risk. They may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
     mappings channel: 'official', version: "${mc_version}"
+    copyIdeResources = true
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg') // Currently, this location cannot be changed from the default.
 
     // Default run configurations.
     // These can be tweaked, removed, or duplicated as needed.
     runs {
-        client {
+        configureEach {
             workingDirectory project.file('run')
 
             // Recommended logging data for a userdev environment
@@ -55,9 +61,6 @@ minecraft {
             property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
 
-            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
-            property 'forge.enabledGameTestNamespaces', 'jeimultiblocks'
-
             mods {
                 jeimultiblocks {
                     source sourceSets.main
@@ -65,56 +68,28 @@ minecraft {
             }
         }
 
+        client {
+            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
+            property 'forge.enabledGameTestNamespaces', "${modid}"
+        }
+
         server {
-            workingDirectory project.file('run')
-
-            property 'forge.logging.markers', 'REGISTRIES'
-
-            property 'forge.logging.console.level', 'debug'
-
-            property 'forge.enabledGameTestNamespaces', 'jeimultiblocks'
-
-            mods {
-                jeimultiblocks {
-                    source sourceSets.main
-                }
-            }
+            property 'forge.enabledGameTestNamespaces', "${modid}"
+            args '--nogui'
         }
 
         // This run config launches GameTestServer and runs all registered gametests, then exits.
         // By default, the server will crash when no gametests are provided.
         // The gametest system is also enabled by default for other run configs under the /test command.
         gameTestServer {
-            workingDirectory project.file('run')
-
-            property 'forge.logging.markers', 'REGISTRIES'
-
-            property 'forge.logging.console.level', 'debug'
-
-            property 'forge.enabledGameTestNamespaces', 'jeimultiblocks'
-
-            mods {
-                jeimultiblocks {
-                    source sourceSets.main
-                }
-            }
+            property 'forge.enabledGameTestNamespaces', "${modid}"
         }
 
         data {
-            workingDirectory project.file('run')
-
-            property 'forge.logging.markers', 'REGISTRIES'
-
-            property 'forge.logging.console.level', 'debug'
+            workingDirectory project.file('run-data')
 
             // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
-            args '--mod', 'jeimultiblocks', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
-
-            mods {
-                jeimultiblocks {
-                    source sourceSets.main
-                }
-            }
+            args '--mod', "${modid}", '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
         }
     }
 }
@@ -130,8 +105,7 @@ repositories {
     // flatDir {
     //     dir 'libs'
     // }
-    maven {	name = "BlameJared";	url = "https://maven.blamejared.com/" }         //IE
-    maven { name = "DVS1 Maven FS"; url = "https://dvs1.progwml6.com/files/maven" } // JEI
+    maven {	name = "BlameJared";	url = "https://maven.blamejared.com/" }         //IE and JEI
 }
 
 dependencies {
@@ -162,27 +136,23 @@ dependencies {
     runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}-forge:${jei_version}")
 }
 
-def version_replaces = [
-    'version': project.mod_version,
-    'mc_version': project.mc_version,
-    'forge_version': project.forge_version,
-    'ie_version': "${mc_version}-${ie_version}"
-]
+tasks.named('processResources', ProcessResources).configure {
+    var replaceProperties = [
+        'version': project.mod_version,
+        'mc_version': project.mc_version,
+        'forge_version': project.forge_version,
+        'loader_version_range': project.loader_version_range,
+        'ie_version': "${mc_version}-${ie_version}"
+    ]
+    inputs.properties replaceProperties
 
-processResources {
-    duplicatesStrategy = DuplicatesStrategy.FAIL
     filesMatching('META-INF/mods.toml') {
-        expand version_replaces
-    }
-    doLast {
-        fileTree(dir: getOutputs().getFiles().getAsPath(), includes: ['**/*.mcmeta']).each {
-            File file -> file.setText(JsonOutput.toJson(new JsonSlurper().parse(file, 'UTF-8')))
-        }
+        expand replaceProperties + [project: project]
     }
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
-jar {
+tasks.named('jar', Jar).configure {
     manifest {
         attributes([
                 "Specification-Title"     : "${modid}",
@@ -194,17 +164,13 @@ jar {
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
-}
 
-// Example configuration to allow publishing using the maven-publish plugin
-// This is the preferred method to reobfuscate your jar file
-jar.finalizedBy('reobfJar')
-// However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
-// publish.dependsOn('reobfJar')
+    finalizedBy 'reobfJar'
+}
 
 publishing {
     publications {
-        mavenJava(MavenPublication) {
+        register('mavenJava', MavenPublication) {
             artifact jar
         }
     }
