--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,8 @@ org.gradle.daemon=false
 modid=jeimultiblocks
 author=sguest
 mod_version=0.0.3
-mc_version=1.19.2
-ie_version=9.0.0-153
-jei_version=11.2.0.246
-forge_version=43.1.27
+mc_version=1.20.1
+ie_version=9.4.0-166.40
+jei_version=15.2.0.27
+forge_version=47.2.6
+loader_version_range=[47,)
