--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,8 @@ neogradle.subsystems.parchment.mappingsVersion=2023.12.31
 # You can find the latest versions here: https://projects.neoforged.net/neoforged/neoforge
 # The Minecraft version must agree with the Neo version to get a valid artifact
 minecraft_version=1.20.4
+# Needed for CF upload
+minecraft_version_base=1.20
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
