--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,8 @@ modid=jeimultiblocks
 author=sguest
 mod_version=1.0.0
 mc_version=1.20.1
+# Needed for CF upload
+mc_version_base=1.20
 ie_version=10.1.0-171
 jei_version=15.3.0.4
 forge_version=47.2.6
