--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -102,7 +102,7 @@ description='''${mod_description}'''
 [[dependencies.jeimultiblocks]]
     modId="immersiveengineering"
     type="required"
-    versionRange="[${ie_version},)"
+    versionRange="[${ie_version_dependency},)"
     ordering="BEFORE"
     side="BOTH"
 
