--- a/gradle.properties
+++ b/gradle.properties
@@ -34,7 +34,7 @@ mod_name=Just Enough Immersive Multiblocks
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.0.1
+mod_version=1.0.3
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -44,5 +44,7 @@ mod_authors=sguest
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=JEI support for Immersive Engineering Multiblocks
 
+# IE uses a more specific version for maven than the declared version within the published mod, so we need both of these
 ie_version=12.0.0-182.88
+ie_version_dependency=12.0.0-182
 jei_version=19.21.0.247
