--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,10 @@ mc_version=1.20.1
 # Needed for CF upload
 mc_version_base=1.20
 ie_version=10.1.0-171
-jei_version=15.3.0.4
-forge_version=47.2.6
+jei_version=15.20.0.116
+forge_version=47.4.0
 loader_version_range=[47,)
+emi_version=1.1.22+1.20.1
+
+# jei or emi
+recipe_viewer=emi
