--- a/gradle.properties
+++ b/gradle.properties
@@ -48,3 +48,8 @@ mod_description=JEI support for Immersive Engineering Multiblocks
 ie_version=12.0.0-182.88
 ie_version_dependency=12.0.0-182
 jei_version=19.21.0.247
+emi_version=1.1.22+1.21.1
+
+# jei or emi
+recipe_viewer=emi
+include_tmrv=true
