--- a/gradle.properties
+++ b/gradle.properties
@@ -34,7 +34,7 @@ mod_name=Just Enough Immersive Multiblocks
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.0.4
+mod_version=1.0.5
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -48,8 +48,7 @@ mod_description=JEI support for Immersive Engineering Multiblocks
 ie_version=12.0.0-182.88
 ie_version_dependency=12.0.0-182
 jei_version=19.21.0.247
-emi_version=1.1.22+1.21.1
+emi_version=1.1.22
 
-# jei or emi
-recipe_viewer=emi
-include_tmrv=true
+# which recipe viewer to load when running in dev mode - jei or emi
+recipe_viewer=jei
