--- a/gradle.properties
+++ b/gradle.properties
@@ -34,7 +34,7 @@ mod_name=Just Enough Immersive Multiblocks
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.0.4
+mod_version=1.0.5
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -44,5 +44,9 @@ mod_authors=sguest
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=JEI support for Immersive Engineering Multiblocks
 
-ie_version=11.4.3-178
-jei_version=17.3.0.2
+ie_version=11.7.0-184
+jei_version=17.3.1.5
+emi_version=1.1.22
+
+# which recipe viewer to load when running in dev mode - jei or emi
+recipe_viewer=jei
