--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,11 @@ mod_version=1.0.4
 mc_version=1.20.1
 # Needed for CF upload
 mc_version_base=1.20
-ie_version=10.1.0-171
-jei_version=15.3.0.4
-forge_version=47.2.6
+ie_version=10.2.0-182
+jei_version=15.20.0.116
+emi_version=1.1.22
+forge_version=47.4.0
 loader_version_range=[47,)
+
+# which recipe viewer to load when running in dev mode - jei or emi
+recipe_viewer=jei
